--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 /*
-Theme Name: Xplore TV
+Theme Name: Xplore TV - Extended
 Text Domain: xploretv
-Version: 0.9.7
+Version: 0.9.7.1
 Requires at least: 5.6
 Requires PHP: 7.2
-Description: This theme for Xplore TV is designed to take full advantage of the A1 set top box and the VEWD browser.
-Tags: xploretv, smart home, VEWD
-Author: seso media group gmbh
+Description: This theme for Xplore TV is designed to take full advantage of the A1 set top box and the VEWD browser. This branch serves as a test pad for new functions.
+Tags: xploretv, smart home, VEWD, BUT, LAB, TEST
+Author: seso media group gmbh & BUT
 Author URI: https://www.seso.at/
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
